添加ts模版的判断

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "commander": "^2.19.0",
-    "download-git-repo": "^1.1.0"
+    "download-git-repo": "^1.1.0",
+    "prompt": "^1.0.0"
   }
 }
