--- a/templates_ts/package.json
+++ b/templates_ts/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --inline --progress --mode development --config build/hot.js",
-    "build": "webpack --config  build/build.js",
+    "build": "node build/build.js",
     "start:dev": "webpack-dev-server --config build/hot.js"
   },
   "author": "zx",
@@ -27,6 +27,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "ora": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.1",
