--- a/templates_ts/package.json
+++ b/templates_ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "app with typescript",
   "main": "index.js",
   "scripts": {
@@ -22,13 +22,14 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@intervolga/optimize-cssnano-plugin": "^1.0.6",
     "autoprefixer": "^9.4.2",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.0.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "ora": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
